# botify

./: .gitignore  Dockerfile  README.md  config.yaml  flake.nix  main.py  options.yaml  pyproject.toml  requirements.txt  result
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 38ndhpgx7afc10cid9yz114pfrn6zgwa-source  96xhva7m9mqy3dly40psd0d9vlydync4-source  g17107z4rly7w13gmcsmy68m2g9vxwqz-source  jz8cj8yzzg378fz6732q286yyr02mmii-source  k8nkf470zpidpa5nh76lh2x6rxfzpwa4-source  rawh5jlvvvb2xrlxw2qnl9a077k09glk-source  whvc239v9byqc0kpa8l8kab2rryxhadj-source
nixos/: README.md  TESTING.md  example.nix  module.nix  run-test.sh  test.nix
pkgs/: default.nix  embar.nix  python-a2s.nix
src/: __init__.py  bot.py
src/commands/: essentials.py  minecraft-restart.py  minecraft-server.py  music.py  ping.py  server-stats.py
src/music/: music.py  voice_client.py
src/stats/: hytale_stats.py  minecraft-stats.py  minecraft_stats.py  server_stats.py
src/tools/: default_role.py  join_message.py
